--- a/files/vars.ini.template
+++ b/files/vars.ini.template
@@ -1,5 +1,6 @@
 [main]
 EC2_INSTANCE_TAG = ${EC2_INSTANCE_TAG}
 RETENTION_DAYS   = ${RETENTION_DAYS}
+TAGS_TO_COPY     = ${TAGS_TO_COPY}
 [regions]
 regionList = ${REGIONS}
